try to fix bugs again

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
     "files": [],
-    "references": [
-      { "path": "./tsconfig.app.json" },
-      { "path": "./tsconfig.node.json" }
-    ],
+   
     "compilerOptions": {
        "noUnusedLocals": false,
         "noUnusedParameters": false,
@@ -11,6 +8,7 @@
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "include": [ "vite-env.d.ts"]
     
 }
