--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "pdfjs-dist": "^4.4.168",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-   "react-dom": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.63.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.25.1",
@@ -66,6 +66,8 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@babel/parser": "^7.28.4",
+    "@babel/types": "^7.28.4",
     "@eslint/js": "^9.27.0",
     "@types/node": "^22.7.3",
     "@types/react": "^19.1.5",
@@ -73,6 +75,7 @@
     "@types/uuid": "^9.0.8",
     "@vitejs/plugin-react": "^4.5.0",
     "autoprefixer": "^10.4.21",
+    "csstype": "^3.1.3",
     "eslint": "^9.27.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -81,6 +84,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
+    "undici-types": "^7.16.0",
     "vite": "^6.3.5"
   }
 }
